fixed all svg's and aligned container to center

--- a/WIP/dtm_v2/css/main.css
+++ b/WIP/dtm_v2/css/main.css
@@ -329,9 +329,11 @@ ABOUT
   position: relative;
 }
 
-.about__pictures--about-h2 {
+.about__pictures--about-h1 {
+  font-size: 3rem;
   text-align: center;
   margin-bottom: 2rem;
+  color: #0ef;
 }
 
 .about__pictures--about-p1 {
@@ -339,31 +341,59 @@ ABOUT
 }
 
 .about__pictures--about-p1, .about__pictures--about-p2 {
-  font-weight: 300;
+  font-weight: 400;
   letter-spacing: 2px;
   line-height: 1.4;
 }
 
-.about__content--h2 {
-  margin-bottom: 2rem;
+.about__content {
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.about__content--h1 {
+  font-size: 3rem;
   text-align: center;
+  margin-bottom: 2rem;
+  color: #0ef;
 }
 
 .about__content--skills {
-  background: crimson;
   display: -ms-grid;
   display: grid;
-  -webkit-column-gap: 1rem;
-          column-gap: 1rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -ms-grid-columns: (1fr)[4];
       grid-template-columns: repeat(4, 1fr);
+  -webkit-column-gap: 5rem;
+          column-gap: 5rem;
+  width: 100%;
 }
 
 .about__content--skills svg {
-  width: 3rem;
+  max-width: 5rem;
+  min-width: 3.5rem;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.about__content--skill {
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 /* 
